<resources>
    <string name="app_name">GuruKu</string>

    <!--LoginActivity-->
    <string name="txt_login">Masuk</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="txt_btn_login">Masuk</string>
    <string name="txt_btn_daftar">Daftar</string>

    <!--RegisterActivity-->
    <string name="txt_daftar">Registrasi Member</string>
    <string name="hint_fName">Nama Depan</string>
    <string name="hint_lName">Nama Belakang</string>
    <string name="hint_email">Email</string>
    <string name="hint_notlp">Nomor Telepon</string>
    <string name="hint_cPassword">Konfirmasi Password</string>

    <!--menu_nav_bottom-->
    <string name="title_guru">Guru</string>
    <string name="title_booking">Pemesanan</string>
    <string name="title_history">Riwayat</string>
    <string name="title_akun">Akun</string>

    <!--AccountFragment-->
    <string name="tv_name">Nama</string>
    <string name="tv_saldo">Saldo</string>
    <string name="tv_about">Tentang</string>
    <string name="tv_logout">Keluar</string>

    <!--TeacherFragmentment-->
    <string name="noData">Guru Tidak Tersedia</string>
    <string name="tv_bookDate">Tanggal</string>
    <string name="tv_bookTime">Jam</string>
    <string name="tv_location">Lokasi</string>
    <string name="tv_hint_lokasi">Lokasi pembelajaran</string>
    <string name="tv_category">Kategori</string>
    <string name="tv_duration">Durasi</string>
    <string name="btn_find">Cari</string>

    <!--BookingFragmentment-->
    <string name="noDataTransaction">Tidak ada pemesanan</string>

    <!--HistoryFragment-->
    <string name="noHistory">Tidak ada riwayat</string>

    <!--GuruItem-->
    <string name="tv_per_jam">per jam</string>

    <!--TeacherDetail-->
    <string name="activity_title_detail_teacher">Rincian Guru</string>
    <string name="txt_btn_book">Pesan Guru</string>
    <string name="tv_per_jam_2">/ jam</string>

    <!--BookingTeacherActivity-->
    <string name="activity_title_booking_teacher">Pemesanan</string>
    <string name="title_teacher_name">Nama Guru :</string>
    <string name="rb_title_one_h">1 Jam</string>
    <string name="rb_title_two_h">2 Jam</string>
    <string name="rb_title_three_h">3 Jam</string>
    <string name="title_payment_method">Pilih metode pembayaran</string>
    <string name="txt_not_confirm_1">Sebelum anda melakukan pembayaran, silahkan klik tombol \"Pesan Sekarang\" untuk melakukan pemesanan.</string>
    <string name="rb_title_wallet">Wallet</string>
    <string name="rb_title_cash">Tunai</string>
    <string name="txt_keterangan_wallet">Pastikan saldo yang anda miliki cukup untuk melakukan transaksi ini.</string>
    <string name="txt_keterangan_cash">Silahkan melakukan pembayaran secara cash kepada Guru yang bersangkutan dengan jumlah yang telah ditetapkan.</string>
    <string name="txt_attention">PERHATIAN: Apabila anda melakukan hal - hal yang dapat merugikan pihak manapun, maka akun anda akan dinonaktifkan secara permanen</string>
    <string name="txt_saldo_wallet">Saldo Wallet :</string>
    <string name="txt_btn_book_now">Pesan Sekarang</string>
    <string name="txt_btn_pay">Bayar</string>

    <!--ListTeacherActivity-->
    <string name="activity_title_list_teacher">Daftar Guru</string>
    <string name="nomor_whatsapp">Nomor WhatsApp</string>
    <string name="id_line">ID Line</string>
    <string name="ubah_profile">Ubah Profile</string>
    <string name="profile">Profile</string>
    <string name="media_sosial">Media Sosial</string>
    <string name="btn_simpan">Simpan</string>
    <string name="btn_batal">Batal</string>

    <string name="activity_title_edit_profile">Edit Profile</string>
    <string name="txt_btn_finish">Selesai</string>
    <string name="hint_note">(Optional)</string>
    <string name="tv_note">Catatan untuk guru</string>
    <string name="tv_booking_detail">Rincian pemesanan</string>
    <string name="tv_date">Tanggal</string>
    <string name="tv_time">Waktu</string>
</resources>
