<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorGrey"
    tools:context="mbd.student.gurukustudent.activity.teacher.BookingTeacherActivity">

    <include layout="@layout/custom_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_weight="1">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_teacher_name"
                        android:textSize="16sp"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:id="@+id/tvNama"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Nama Guru"
                        android:textSize="16sp"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_price_white_36dp" />

                    <TextView
                        android:id="@+id/tvPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        android:textColor="@color/colorWhite"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        tools:text="Rp25.000" />

                </LinearLayout>

                <RadioGroup
                    android:id="@+id/rgDuration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@+id/rbOneHour"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbOneHour"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/rb_checked"
                        android:button="@null"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/rb_title_one_h"
                        android:textColor="@drawable/rb_text_checked" />

                    <RadioButton
                        android:id="@+id/rbTwoHour"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/rb_checked"
                        android:button="@null"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/rb_title_two_h"
                        android:textColor="@drawable/rb_text_checked" />

                    <RadioButton
                        android:id="@+id/rbThreeHour"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/rb_checked"
                        android:button="@null"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/rb_title_three_h"
                        android:textColor="@drawable/rb_text_checked" />

                </RadioGroup>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/title_payment_method" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp">

                <RadioGroup
                    android:id="@+id/rgPaymentMethod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@+id/rbWallet"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbWallet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/rb_checked"
                        android:button="@null"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/rb_title_wallet"
                        android:textColor="@drawable/rb_text_checked" />

                    <RadioButton
                        android:id="@+id/rbCash"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/rb_checked"
                        android:button="@null"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/rb_title_cash"
                        android:textColor="@drawable/rb_text_checked" />

                </RadioGroup>

                <LinearLayout
                    android:id="@+id/lytWallet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_keterangan_wallet" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/colorGrey"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_saldo_wallet"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/tvSaldo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Rp50.000"
                        android:textSize="24sp"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lytCash"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_keterangan_cash" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_attention"
            android:layout_marginTop="10dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_next"
        android:textColor="@color/colorWhite"
        android:background="@drawable/btn_click_book"/>

</LinearLayout>
