<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorGrey"
    tools:context="mbd.student.gurukustudent.fragment.TeacherFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:id="@+id/cvDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="5dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="15dp"
                        android:gravity="center">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_date"
                                android:layout_marginRight="5dp"
                                android:layout_marginEnd="5dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tv_bookDate"
                                android:textColor="@color/colorBlack"/>

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="@color/colorGrey"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="15dp"/>

                        <TextView
                            android:id="@+id/tvBookDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="20/02/2018"
                            android:textSize="22sp"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"/>

                <android.support.v7.widget.CardView
                    android:id="@+id/cvTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="5dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="15dp"
                        android:gravity="center">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_time"
                                android:layout_marginRight="5dp"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tv_bookTime"
                                android:textColor="@color/colorBlack"/>

                        </LinearLayout>


                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="@color/colorGrey"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="15dp"/>

                        <TextView
                            android:id="@+id/tvTimePrivate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="14:00"
                            android:textSize="22sp"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="15dp"
                    android:focusableInTouchMode="true">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_location"
                            android:layout_marginRight="5dp"
                            android:layout_marginEnd="5dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_location"
                            android:textColor="@color/colorBlack"/>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/colorGrey"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="15dp"/>

                    <EditText
                        android:id="@+id/etLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBlack"
                        android:hint="@string/tv_hint_lokasi"
                        android:gravity="top"
                        android:fontFamily="sans-serif"
                        android:inputType="textMultiLine"
                        android:lines="3"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="15dp"
                    android:focusableInTouchMode="true">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_category"
                            android:layout_marginRight="5dp"
                            android:layout_marginEnd="5dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_category"
                            android:textColor="@color/colorBlack"/>

                    </LinearLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/colorGrey"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="15dp"/>

                    <com.jaredrummler.materialspinner.MaterialSpinner
                        android:id="@+id/spnCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBlack"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="15dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_duration"
                            android:layout_marginRight="5dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_duration"
                            android:textColor="@color/colorBlack"/>

                    </LinearLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/colorGrey"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="15dp"/>

                    <RadioGroup
                        android:id="@+id/rgDuration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checkedButton="@+id/rbOneHour"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rbOneHour"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/rb_checked"
                            android:button="@null"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/rb_title_one_h"
                            android:textColor="@drawable/rb_text_checked" />

                        <RadioButton
                            android:id="@+id/rbTwoHour"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/rb_checked"
                            android:button="@null"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/rb_title_two_h"
                            android:textColor="@drawable/rb_text_checked" />

                        <RadioButton
                            android:id="@+id/rbThreeHour"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/rb_checked"
                            android:button="@null"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/rb_title_three_h"
                            android:textColor="@drawable/rb_text_checked" />

                    </RadioGroup>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/btnFind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_find"
                android:textColor="@color/colorWhite"
                android:background="@drawable/btn_click_book"
                android:layout_marginTop="15dp"/>

        </LinearLayout>

    </ScrollView>

<!--
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvGuru"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.v4.widget.SwipeRefreshLayout>

        <TextView
            android:id="@+id/tvNoData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noData"
            android:textSize="24sp"
            android:layout_centerInParent="true"
            android:visibility="gone"/>

    </RelativeLayout>
-->

</FrameLayout>
